--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,6 @@
+/* * {
+    border: 1px solid red;
+} */
 body {
     margin: 0;
     font-family: sans-serif;
@@ -43,4 +46,17 @@ main {
     display: flex;
     justify-content: space-between;
     gap: 25%;
+}
+/* group projects */
+.group-item {
+    margin: 25px 0;
+    background: rgb(159,159,159);
+    display: flex;
+    justify-content: space-between;
+    padding: 25px;
+}
+.item-img {
+    background: rgb(255,255,255);
+    display: flex;
+    align-items: center;
 }
