--- a/css/index.css
+++ b/css/index.css
@@ -4,11 +4,32 @@
 body {
     margin: 0;
     font-family: sans-serif;
-    background: rgb(223,223,223);
+    background: rgb(179,255,255);
+    background-image: url("../images/cloud-texture.png")
+}
+/* borders */
+.top-border,
+.bottom-border {
+    background-image: url("../images/stone-border.png");
+    height: 32px;
+}
+.top-border {
+    margin-top: 32px;
+}
+.bottom-border {
+    margin-bottom: 32px;
+}
+/* boxes */
+.text-bg {
+    background-image: url("../images/text-bg.png");
+    border: 2px solid rgb(153,153,153);
+    border-radius: 8px;
+    padding: 8px;
 }
 /* header */
 header {
     background: rgb(128,128,128);
+    background-image: url("../images/stone-bg.png");
     padding: 25px;
 }
 .header-container {
@@ -16,24 +37,30 @@ header {
     justify-content: space-between;
 }
 /* logo and menu */
-.header-logo, .header-menu {
+.header-logo,
+.header-menu {
     display: flex;
     align-items: center;
 }
-.logo-container, .menu-container {
+.logo-container,
+.menu-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
 }
-.logo-container div, .menu-container div {
+.logo-container div,
+.menu-container div {
     height: fit-content;
 }
 /* main */
 .main-container {
     background: rgb(191,191,191);
     max-width: 50%;
-    margin: 25px auto;
+    margin: 0 auto;
+}
+.main-content {
+    background-image: url("../images/stone-bg.png");
     padding: 25px;
 }
 /* intro */
