--- a/css/styles.css
+++ b/css/styles.css
@@ -108,3 +108,18 @@ a:active {
 .cv-flex {
     display: flex;
 }
+
+.cv-item {
+    margin: 1.5rem 0;
+}
+
+.cv-item * {
+    margin: 0;
+    padding: 0;
+}
+
+#myCanvas {
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+}
