--- a/css/styles.css
+++ b/css/styles.css
@@ -118,8 +118,7 @@ a:active {
     padding: 0;
 }
 
-#myCanvas {
-    width: 100px;
-    height: 100px;
-    border: 1px solid black;
+#canvas {
+  background-color: white;
+  border: 2px solid black;
 }
