commit bouncy red ball

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 
 /* header */
 header {
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 .header-content, .header-logo, .header-menu, .logo-container, .menu-container {
     display: flex;
@@ -115,13 +115,20 @@ a:active {
     margin: 1.5rem 0;
 }
 
-.cv-item * {
+.cv-item h3,
+.cv-item p {
     margin: 0;
     padding: 0;
 }
 
-#canvas {
-  background-color: white;
+.canvas-container {
+    width: fit-content;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#myCanvas {
+  background: white;
   border: 2px solid black;
 }
 
